--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
-MONGO_URI=mongodb://127.0.0.1:27017/finsight
-JWT_SECRET=supersecret
+MONGODB_URI=mongodb://127.0.0.1:27017/finsight
+JWT_SECRET=supersecret123
 PORT=5004
+
 
 # CORS_ORIGIN=http://localhost:5173,http://localhost:5174,http://localhost:5175
