--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
+PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/finsight
-JWT_SECRET=supersecret123
-PORT=5004
-
-
-# CORS_ORIGIN=http://localhost:5173,http://localhost:5174,http://localhost:5175
+JWT_SECRET=some-long-random-string
+CORS_ORIGIN=http://localhost:5173
