--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/finsight
+MONGODB_URI=mongodb+srv://coct811:[Coct811@@]@cluster0.ev0bpih.mongodb.net/
 JWT_SECRET=some-long-random-string
 CORS_ORIGIN=http://localhost:5173
