--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://coct811:[Coct811@@]@cluster0.ev0bpih.mongodb.net/
+MONGODB_URI=mongodb+srv://devvaghela2004_db_user:84nheQFgEVK6LdOd@cluster0.z2nhm8z.mongodb.net/
 JWT_SECRET=some-long-random-string
 CORS_ORIGIN=http://localhost:5173
